templates/rm/main.css
/************ General element styles ************/
html body {
	font-size : 75%;
	background-color: #0B2A3A;
	color:#ffffcc;
	font-family: Arial, Helvetica, Geneva, Swiss, SunSans-Regular, sans-serif;
}

li { margin-left: 1em;}

a:link	 { text-decoration: underline; color : #CCCCFF;}
a:visited	 {text-decoration: underline; color : #CCCCFF;}
a:focus	 {text-decoration: underline; color : #CCCCFF;}
a:hover	 { text-decoration: underline; color : #FFCCCC;}
a:active	 {text-decoration: underline; color : #FFFFCC;}

/* General text sizes */
.medtext, div.medtext, span.medtext { font-size : 90%; }
.smalltext, div.smalltext, span.smalltext { font-size : 80%; letter-spacing: -0.25px;}


/* Highlighted text */
.highlight	{font-weight: bold; color : #FFCCCC; }
a.highlight 	{  text-decoration: underline; color : #CCCCFF; }
a.highlight:hover{ text-decoration: underline; color : #FFFFCC; }
a.highlight:active { text-decoration:none; color:#CCCCFF; }



/* Form elements */

fieldset {
	border: 1px solid #89CAC8;
	padding:1em;
	margin-bottom:1em;
	margin-top:1em;
}

legend {
	font-weight: bold;
	color: #DECB97;
}


textarea, select {
	color : #FFFFFF;
	border-color : #89CAC8;
	background-color : #0B2A3A;
}


input {
	text-indent : 2px;
	color : #FFFFFF;
	border-color : #89CAC8;
 	background-color:#0B2A3A;
 }

/* Separate properties for buttons; not supported by IE */
input[type=button], input[type=submit], input[type=reset], .button  {
	font-size:95%;
}

/* The main submit button option */
input.mainoption {
	font-weight : bold;
	font-family: "Helvetica Narrow","Arial Narrow",Tahoma,Arial,Helvetica,sans-serif;
}


/************ Layout control ************/

.rightalign {
	text-align: right;
	float: right;
}

.leftalign {
	text-align: left;
	float: left;
}

.centeralign {
	text-align: center;
}
/* to prevent floating for new sections after image */
.newline {
	clear:both;
}


/************ main layout containers ************/

#headerleft {
	width: 20%;
	float:left;
}


#headercenter {
	margin-left: 20%;
	margin-right: 20%;
	width: 56.5%;
	position:absolute;
	text-align: center;
}

#headerright {
	width: 20%;
	text-align: right;
	float:right;
}

#navigator {
	width: 19.5%;
	position: absolute;
	padding: 0.20em;
	margin-top: 0.5em;
	font-size: 150%;
}

#mobilenavigator {
	background-color: #0F384D;
	padding: 0.5em;
	margin-top: 1em;
	font-size: 150%;
	border: 1px solid #89CAC8;
	width: 98.5%;
}

#banners {
	width: 95%;
	position: absolute;
	background-color: #0F384D;
	margin-top: 2em;
	font-size: 75%;
	border-style: solid;
	border-width: 1px 0px 0px 0px;
	border-color: #89CAC8;
	padding-top: 0.35em;
	padding-bottom: 0.35em;
}

#contentarea {
	background-color: #0F384D;
	z-index: 100;
	min-width: 1px;
	width: 77%;
	padding: 1em;
	padding-top: 0em;
	margin-left: 21%;
	margin-top: 1.5em;
	padding-bottom:120px;

}


#mobilecontentarea {
	background-color: #0F384D;
	z-index: 100;
	min-width: 1px;
	padding: 0.5em;
	margin-top: 1.5em;
	padding-bottom:1.5em;

}

/* Border around everything else */
#wrapper {
	background-color: #0F384D;
	padding: 1em;
	background-image:url(img/bg.gif);
	background-repeat:no-repeat;
	border: 1px #CCCCFF solid;
}


/************ Navigator elements ************/

/* For accessibility */
.invisible {
	width: 0px;
	height: 0px;
	margin:0px;
	padding:0px;
	border:0px;
	overflow: hidden;
	font-size: 0px;
	float:left;
}

/* "Home" link on navigator*/
#navhomelink {
	margin-top:0.5em;
	font-weight: bold;
}

.potdcaption {
	width: 98%;
	padding-top: 0.5em;
	font-weight: bold;
	font-size: 65%;
	color: #FFCCCC;
	text-align: left;
	margin-bottom: 2em;
}

.aotd {
	width: 98%;
	margin-bottom: 2em;
	font-weight: bold;
	font-size: 75%;
	text-align: left;
	border-style: solid;
	border-width: 1px 0px 1px 0px;
	border-color: #89CAC8;
	padding-bottom: 0.35em;
	padding-top: 0.35em;
}

/* Navigator - selected item */
.navhighlight	{ font-size: 100%; color : #FFCCCC;}

/* Navigator - links */
.navtitle	{ color : #CCCCFF;}
a.navtitle 	{ text-decoration: none; color : #CCCCFF; }
a.navtitle:hover{ text-decoration: underline; color : #FFCCCC; }
a.navtitle:active { text-decoration:none; color:#CCCCFF; }


/* Navigator link for the lower levels */
.navlink		{ font-weight: bold; font-size: 70%; color : #CCCCFF; }
a.navlink 	{ text-decoration: none; color : #CCCCFF; }
a.navlink:hover{ text-decoration: underline; color : #FFCCCC; }
a.navlink:active { text-decoration:none; color: #CCCCFF; }


.navrootlinkwrapper {
	margin-top:1em;
}

.navlinkwrapper {
	margin-top:0.4em;
	margin-bottom:0.4em;
}

/************ header elements ************/

#sitedescription {
	font-style: italic;
	padding-top: 0.75em;
	padding-bottom: 0.75em;
}

.logoutlink {
	text-align: right;
	text-decoration: underline;
	margin-top: 100px;
}

/* formerly thTop - page title in header and navigator elements on splashpage */
.headerpagetitle {
	width: 98.5%;
	text-align: center;
	border-color: #CCCCFF;
	border-style: solid;
	border-width: 1px 0px 1px 0px;
	padding-top: 0.4em;
	padding-bottom: 0.35em;

	padding-left:0.5em;
	padding-right:0.5em;

	margin-top: 8em;
	font-size: 160%;
	font-weight: bold;
	color: #FFFFCC;
	background-color: #0F384D;
	background-image:url(img/title.gif);
	height: 24px;

}

/* Site name */
.maintitle	{
	font-weight: bold;
	font-size: 350%;
	font-family: Arial, Helvetica, Geneva, Swiss, SunSans-Regular, sans-serif;
	margin:0.25em;
	color : #FFCCCC;
}


/************ Footer elements ************/

.footer {
	font-size: 80%;
	font-family: Arial, Helvetica, sans-serif;
	letter-spacing: -0.5px;
	color: #CCCCFF;
}
a.footer		{ color: #00AEED; text-decoration: none;}
a.footer:hover { color: #DEA479; text-decoration: underline;}


/************ Content titles ************/

/* The text used for individual page's titles */
.pagetitle	{
	font-weight: bold;
	font-size: 250%;
	font-family: Arial, Helvetica, Geneva, Swiss, SunSans-Regular, sans-serif;
	line-height : 160%;
	color : #FFCCCC;
}


/* Titles for newsitemsections, articlesections */
.sectiontitle	{
	font-size: 220%;
	font-family: Arial, Helvetica, Geneva, Swiss, SunSans-Regular, sans-serif;
	margin-bottom: 0.5em;
	color : #FFCCCC;
}

/* Fos newsitemsections */
.sectionsubtitle	{
	font-size: 175%; 
	font-family: Arial, Helvetica, Geneva, Swiss, SunSans-Regular, sans-serif;
	margin-top: 0.5em;
	margin-bottom: 0.5em;
	color : #FFCCCC;
	margin-top: 1em;
}


/************ Content elements ************/

/* section text all over the place */
.sectiontext {
	text-align: justify;
}

/* Synopsis for page intros formerly articlesynopsis */
.introtext	{
	font-weight: bold;
	text-align: justify;
	color: #FFFFCC;
}

/* Pagemenu */
.pagemenu {
	text-align: right;
	float: right:
}

/* Copyright info */
.copyright {
	font-size: 80%;
	font-family: Arial, Helvetica, sans-serif;
	letter-spacing: -0.5px;
}

.editdata {
	margin-top:1.5em;
	width: 100%;
	border-style: solid;
	border-width: 1px 0px 0px 0px;
	border-color: #89CAC8;
	padding-top: 0.5em;
}


/************ Menu pages ************/

/* content links - linklistmenu, vormerly "nav"*/
.contentnavlink {
	font-weight: bold;
}

/* content - linklistmenu pagetitles */
.contentnavtitle, a.contentnavtitle	{
	color: #CCCCFF;
	font-size: 180%;
}

a.contentnavtitle:hover{ text-decoration: underline; color : #FFCCCC; }

.contentnavrootlinkwrapper {
	margin-top:5ex;
	margin-bottom:1ex;
}

.contentnavlinkwrapper {
	margin-top:1.75ex;
	line-height: 1.5em; 
	text-align: justify;
}

/* for articlemenu */
.articleinfo {}

/* for menu pages */
.subpages {
	margin-left:3em;
}

/************ Newsitems and articles ************/

/* Clickable categories */
.articleinfocategories {
	margin-top: 0.2em;
	font-size:80%;
}

.newsitemcategories {
	margin-top: 0.2em;
	color : #FFCCCC;
	font-size:100%;
}

.categorylistlink {
	margin-right:0.5em;
	margin-left: 0.5em;
}

/* News: RSS button */
.rss {
	text-align: left;
	float: left:
}

/* News: filter form wrapper */
.newsfilterform {
	margin-top:1.5em;
	border-style: solid;
	border-width: 1px 0px 1px 0px;	
}

/* Newsitem: wrapper */
.newsitem {
	margin-top:1.5em;
	border-style: solid;
	border-width: 1px 0px 0px 0px;
	padding-top: 0.5em;
	border-color: #89CAC8;
}

/* Newsitem: Label for section with quoted text */
.newsquotetitle {
	font-weight: bold;
	margin-left: 2em;
	padding-top: 2em;
	margin-bottom: 1em;
}

/* Newsitem: Section with quoted text */
div.newsquote {
	margin-left: 2em;
	margin-right: 2em;
	width: *;
	padding: 1em;
	font-style: italic;
	text-align: justify;
	color:#FFFFCC;
	background-color: #0F384D;
}


/* Newsitem and article: Source info */
.articlesource	{color : #FFCCCC; }
.articleauthor	{font-weight: bold;	font-style: italic;color : #FFCCCC; }
.articlelocation	{color : #FFCCCC; }
.articledate	{font-style: italic;color : #FFCCCC; }

/* Article: Table of Contents */
.articletoc {
	margin-top:1.5em;
	padding-bottom:0.5em;
	border-style: solid;
	border-width: 1px 0px 1px 0px;
	padding-top: 0.5em;
	border-color: #89CAC8;
}

.articletoc li {
	color:#CCCCFF;
}

/************ Gallery ************/

.galleryimage {
	float:left;
	text-decoration:none;
	padding:1em;
	margin:1em;
    height: 350px;
    overflow:hidden;
    display:table-cell;
	font-size:90%;    
}

.gallerycontents {
	float:left;
	width:100%;
	padding:1em;
	margin:1em;
	display:inline;
    overflow:hidden;
    display:table-cell;
}

/************ Linklist ************/

/* Linklist link */
.linktitle	{ text-decoration: none; font-size: 135%; color : #CCCCFF;}
a.linktitle 	{ text-decoration: none; color : #CCCCFF; }
a.linktitle:visited 	{ text-decoration: none; color : #CCCCFF; }
a.linktitle:hover{ text-decoration: underline; color : #FFCCCC; }
a.linktitle:active { text-decoration:underline; color:#CCCCFF; }


.linklistlink {
	margin-top:1em;
	border-style: solid;
	border-width: 1px 0px 0px 0px;
	border-color:#89CAC8;
}

.linkedimage {
	border: 10px solid transparent;
	float:left;
}

/************ Images and image captions ************/

/* Image + caption text */
.captionedimage	{
	padding: 0.75em;
	margin: 1em;
	text-align: center;
	border-style: solid;
	border-width: 1px;
	border-color: 89CAC8;
}
.imagecaption {
	padding-left: 0.75em;
	padding-right: 0.75em;
	padding-top: 0.5em;
	font-weight: bold;
	font-size: 100%;
	color: #FFCCCC;
	text-align: center;
	font-style:normal;
}

.imagecaption a {
	text-decoration: underline;
	color: #CCCCFF;
}

.imagecaption a:hover {
	text-decoration: underline;
	color: #FFFFCC;
}

/************ Splashpage ************/

.splashpageheaderspacer {
	padding-top:3.5em;
	padding-bottom:3em;
}

#splashpagecontentarea {
	z-index: 100;
	min-width: 1px;
	padding: 1em;
	padding-top: 0em;
	margin-top: 3em;
	text-align: center;
}

.splashpagelink {
	padding-left: 0.75em;
	padding-right: 0.75em;
}


/************ Guestbook ************/

.guestbookentry {
	margin-top:1.5em;
	border-style: solid;
	border-width: 1px 0px 0px 0px;
	padding-top: 0.5em;
	border-color: #89CAC8;
}

